--- a/.github/workflows/dactyl.yml
+++ b/.github/workflows/dactyl.yml
@@ -4,24 +4,16 @@ on:
   push:
     branches:
     - master
-    - future
-  pull_request:
     paths:
-    - 'lib/python/**'
-    - 'bin/qmk'
-    - 'requirements.txt'
-    - '.github/workflows/cli.yml'
+    - keyboards/handwired/dactyl_manuform/
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    # container: qmkfm/base_container
     steps:
     - uses: actions/checkout@v2
       with:
         submodules: recursive
-    # - name: Install dependencies
-    #   run: pip3 install -r requirements.txt
     - name: Test Dactyl
       shell: 'script --return --quiet --command "bash {0}"'
       run: |
