updated corne to match dactyl layout

--- a/.github/workflows/crkbd.yml
+++ b/.github/workflows/crkbd.yml
@@ -1,11 +1,9 @@
-name: CLI CI
+name: CRKBD CI
 
 on:
   push:
-    branches:
-    - master
     paths:
-    - keyboards/crkbd
+    - 'keyboards/crkbd/**'
 
 jobs:
   test:
